# kid3-tag-copy

./: .gitignore  LICENSE  README.md  build-appimage.sh  kid3-tag-copy.py  kid3-tag-copy.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: releases.yml
kid3_tag_copy/: __main__.py  kid3_tag_copy.py
