[project]
name = "kid3-tag-copy"
version = "1.0.0"
description = "Copy tags between audio files using Kid3."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"   # SPDX string, not table
authors = [{ name="WhonderWy" }]
urls = { Homepage = "https://github.com/WhonderWy/kid3-tag-copy" }
keywords = ["audio", "tags", "kid3", "mp3", "flac"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

dependencies = [
    "pyside6",
]

[project.optional-dependencies]
system = ["kid3-cli"]

[project.scripts]
kid3-tag-copy = "kid3_tag_copy.kid3_tag_copy:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kid3_tag_copy"]
exclude = ["tests", "venv*", "AppDir*", "dist", "*.egg-info"]
